voting-app/templates/service.yaml
# voting-app/templates/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-canary
spec:
  selector:
    app: voting-app-canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
